fix: broken soundcloud url pattern in the manifest

--- a/src/manifest_v3.json
+++ b/src/manifest_v3.json
@@ -11,7 +11,7 @@
     "1080": "images/logo1080.png"
   },
   "permissions": ["tabs", "storage", "cookies"],
-  "host_permissions": ["https://soundcloud.com"],
+  "host_permissions": ["https://soundcloud.com/*"],
   "background": {
     "service_worker": "background.js"
   },
